--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coverage==4.3.4
 cryptography==2.2.2
 dj-database-url==0.5.0
 Django==2.0.4
+django-heroku==0.2.1
 django-model-utils==3.1.1
 django-phonenumber-field==1.3.0
 django-storages==1.6.6
